--- a/WestcoastEdu.Web/Views/Home/Index.cshtml
+++ b/WestcoastEdu.Web/Views/Home/Index.cshtml
@@ -3,6 +3,7 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Välkommen</h1>
+    <p>Vi erbjuder kurser inom IT till företag och privatpersoner.</p>
+    <p>Här kan du se vår fullständiga kurskatalog.</p>
 </div>
