style/web content

--- a/WestcoastEdu.Web/Views/Course/List.cshtml
+++ b/WestcoastEdu.Web/Views/Course/List.cshtml
@@ -1,7 +1,7 @@
 ﻿@model List<WestcoastEdu.BCL.Courses.Course>
 
 @{
-    ViewData["Title"] = "All Courses";
+    ViewData["Title"] = "Kurskatalog";
 }
 
 <div>
