--- a/WestcoastEdu.Web/Views/Home/Index.cshtml
+++ b/WestcoastEdu.Web/Views/Home/Index.cshtml
@@ -1,9 +1,9 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Hem";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Välkommen</h1>
+    <h1 class="display-4">Välkommen till WestcoastEDU</h1>
     <p>Vi erbjuder kurser inom IT till företag och privatpersoner.</p>
-    <p>Här kan du se vår fullständiga kurskatalog.</p>
+    <p>Här kan du se vår fullständiga kurskatalog. <a asp-controller="course" asp-action="list">Kurskatalog</a></p>
 </div>
