--- a/WestcoastEdu.Web/Views/Course/List.cshtml
+++ b/WestcoastEdu.Web/Views/Course/List.cshtml
@@ -4,8 +4,8 @@
     ViewData["Title"] = "Kurskatalog";
 }
 
-<div>
-    <h1>Kurskatalog</h1>
+<div class="container">
+    <h1 class="title">Kurskatalog</h1>
     <ul>
         
         @foreach (var course in Model)
