--- a/WestcoastEdu.Web/Views/Home/Index.cshtml
+++ b/WestcoastEdu.Web/Views/Home/Index.cshtml
@@ -2,8 +2,10 @@
     ViewData["Title"] = "Hem";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Välkommen till WestcoastEDU</h1>
-    <p>Vi erbjuder kurser inom IT till företag och privatpersoner.</p>
-    <p>Här kan du se vår fullständiga kurskatalog. <a asp-controller="course" asp-action="list">Kurskatalog</a></p>
+<div class="container">
+    <h1 class="title">Välkommen till Westcoast Education</h1>
+    <p class="subtitle">Vi erbjuder kurser inom IT till företag och privatpersoner.</p>
 </div>
+
+
+    
