--- a/WestcoastEdu.Web/Views/Home/Index.cshtml
+++ b/WestcoastEdu.Web/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 
 <div class="container">
     <h1 class="title">Välkommen till Westcoast Education</h1>
-    <p class="subtitle">Vi erbjuder kurser inom IT till företag och privatpersoner.</p>
+    <h2 class="subtitle">Vi erbjuder kurser inom IT till företag och privatpersoner.</h2>
 </div>
 
 
