--- a/WestcoastEdu.Web/Views/AdminCourses/New.cshtml
+++ b/WestcoastEdu.Web/Views/AdminCourses/New.cshtml
@@ -27,7 +27,7 @@
             </div>
             <div class="field">
                 <div class="control">
-                    <button type="submit" class="button is-success">Spara</button>
+                    <input type="submit" class="button is-success" value="Spara" />
                 </div>
             </div>
         </form>
