--- a/WestcoastEdu.Web/Views/AdminCourses/Edit.cshtml
+++ b/WestcoastEdu.Web/Views/AdminCourses/Edit.cshtml
@@ -1,5 +1,4 @@
-﻿
-@model WestcoastEdu.BCL.Courses.Course
+﻿@model WestcoastEdu.BCL.Courses.Course
 
 @{
     ViewData["Title"] = "Admin";
@@ -10,31 +9,40 @@
     <h1 class="title">Westcoast Education Admin</h1>
     <h2 class="subtitle">Administrera Kurs: @Model.Name</h2>
 
-    
+
     <div class="columns">
         <div class="column is-half-desktop">
             <form asp-action="edit" asp-route-id=@Model.Id method="post">
-                    <div class="field">
-                        <div class="control">
-                            <label class="label">Namn</label>
-                            <input class="input" asp-for="Name">
-                        </div>
+                <div class="field">
+                    <div class="control">
+                        <label class="label">@Html.DisplayNameFor(m => m.Name)</label>
+                        <input class="input" asp-for="Name">
                     </div>
-                    <div class="field">
-                        <div class="control">
-                            <label class="label" for="">Kod</label>
-                            <input class="input" asp-for="Code">
-                        </div>
+                </div>
+                <div class="field">
+                    <div class="control">
+                        <label class="label" for="">@Html.DisplayNameFor(m => m.Code)</label>
+                        <input class="input" asp-for="Code">
                     </div>
-                    <div class="field">
-                        <div class="control">
-                            <input type="submit" class="button is-success" value="Spara" />
-                        </div>
+                </div>
+                <div class="field">
+                    <div class="control">
+                        <label class="label" for="">@Html.DisplayNameFor(m => m.StartDate)</label>
+                        <input class="input" asp-for="StartDate">
                     </div>
-                </form>
+                </div>
+                <div class="field">
+                    <div class="control">
+                        <label class="label" for="">@Html.DisplayNameFor(m => m.LengthInWeeks)</label>
+                        <input class="input" asp-for="LengthInWeeks">
+                    </div>
+                </div>
+                <div class="field">
+                    <div class="control">
+                        <input type="submit" class="button is-success" value="Spara" />
+                    </div>
+                </div>
+            </form>
         </div>
     </div>
 </div>
-
-
-    
