--- a/WestcoastEdu.Web/Views/AdminCourses/New.cshtml
+++ b/WestcoastEdu.Web/Views/AdminCourses/New.cshtml
@@ -15,14 +15,26 @@
         <form asp-action="new" method="post">
             <div class="field">
                 <div class="control">
-                    <label class="label">Namn</label>
+                    <label class="label">@Html.DisplayNameFor(m => m.Name)</label>
                     <input class="input" asp-for="Name">
                 </div>
             </div>
             <div class="field">
                 <div class="control">
-                    <label class="label" for="">Kod</label>
+                    <label class="label" for="">@Html.DisplayNameFor(m => m.Code)</label>
                     <input class="input" asp-for="Code">
+                </div>
+            </div>
+            <div class="field">
+                <div class="control">
+                    <label class="label" for="">@Html.DisplayNameFor(m => m.StartDate)</label>
+                    <input class="input" asp-for="StartDate">
+                </div>
+            </div>
+            <div class="field">
+                <div class="control">
+                    <label class="label" for="">@Html.DisplayNameFor(m => m.LengthInWeeks)</label>
+                    <input class="input" asp-for="LengthInWeeks">
                 </div>
             </div>
             <div class="field">
