--- a/WestcoastEdu.Web/Views/AdminUsers/Index.cshtml
+++ b/WestcoastEdu.Web/Views/AdminUsers/Index.cshtml
@@ -43,7 +43,7 @@
 
     </table>
 
-    <a asp-action="new" class="button is-success">Add New User</a>
+    <a asp-action="new" class="button is-success">Add a New User</a>
 
     
 </div>
