--- a/WestcoastEdu.Web/Views/Course/List.cshtml
+++ b/WestcoastEdu.Web/Views/Course/List.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<WestcoastEdu.BCL.Courses.Course>
+﻿@model List<WestcoastEdu.Web.Models.Course>
 
 @{
     ViewData["Title"] = "Kurskatalog";
